# aoc

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml  x.py
.github/workflows/: build.yml
2023/: README.md
2024/: README.md
2024/08/: part1.py  part2.py
2024/09/: part1.py  part2.py
2024/10/: part1.py  part2.py
2024/11/: part1.py  part2.py
2024/12/: part1.py  part2.py
2024/13/: part1.py  part2.py
2024/14/: part1.py  part2.py
2024/15/: part1.py  part2.py
2024/16/: part1.py  part2.py
2024/17/: part1.py  part2.py
2024/18/: part1.py  part2.py
2024/19/: part1.py  part2.py
2024/20/: part1.py  part2.py
2024/21/: part1.py  part2.py
2024/22/: part1.py  part2.py
2024/23/: part1.py  part2.py
2024/24/: part1.py  part2.py
2024/25/: input.txt  part1.py  part2.py
2025/: README.md
2025/01/: part1.py  part2.py
2025/02/: part1.py  part2.py
2025/03/: part1.py  part2.py
2025/04/: part1.py  part2.py
2025/05/: part1.py  part2.py
2025/06/: part1.py  part2.py
2025/07/: part1.py  part2.py
2025/08/: part1.py  part2.py
2025/09/: part1.py  part2.py
2025/11/: part1.py  part2.py
2025/12/: part1.py  part2.py
x/: aoc.py  runner.py  statistics.py  x.py
